--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "mu, sigma = 14, 2.8\n",
     "N = 5000\n",
-    "s = np.random.normal(mu, sigma, N)\n",
+    "normal distribution = np.random.normal(mu, sigma, N)\n",
     "sns.distplot(s);"
    ]
   },
