Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,8 +50,8 @@
     "\n",
     "mu, sigma = 14, 2.8\n",
     "N = 5000\n",
-    "normal distribution = np.random.normal(mu, sigma, N)\n",
-    "sns.distplot(s);"
+    "normal_distribution = np.random.normal(mu, sigma, N)\n",
+    "sns.distplot();"
    ]
   },
   {
