Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "mu, sigma = 14, 2.8\n",
     "N = 5000\n",
-    "normal_distribution = np.random.normal(mu, sigma, N)\n",
+    "normal_distribution = np.random.normal[tuple(mu, sigma, N)]\n",
     "sns.distplot(normal_distribution);"
    ]
   },
