--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,8 @@
     }
    ],
    "source": [
-    "# Calculate a histogram for above data distribution\n"
+    "# Calculate a histogram for above data distribution\n",
+    "matplotlib.pyplot.hist(x, bins=None, range=None, density=None, weights=None, cumulative=False, bottom=None, histtype='bar', align='mid', orientation='vertical', rwidth=None, log=False, color=None, label=None, stacked=False, normed=None, *, data=None, **kwargs)[source]"
    ]
   },
   {
