--- a/index.ipynb
+++ b/index.ipynb
@@ -103,9 +103,28 @@
    ],
    "source": [
     "# Calculate a histogram for above data distribution\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.style.use('ggplot')\n",
-    "matplotlib.pyplot.hist(x, bins=None, range=None, density=None, weights=None, cumulative=False, bottom=None, histtype='bar', align='mid', orientation='vertical', rwidth=None, log=False, color=None, label=None, stacked=False, normed=None, *, data=None, **kwargs)[source]"
+    "mhn, mhbins = np.histogram(male_df.Height, 10, density=1)\n",
+    "fhn, fhbins = np.histogram(female_df.Height, 10, density=1)\n",
+    "\n",
+    "# Initialize numpy arrays according to number of bins with zeros to store interpolated values\n",
+    "pdfmhx = np.zeros(mhn.size)\n",
+    "pdfmhy = np.zeros(mhn.size)\n",
+    "pdffhx = np.zeros(fhn.size)\n",
+    "pdffhy = np.zeros(fhn.size)\n",
+    "\n",
+    "# Interpolate through histogram bins \n",
+    "# identify middle point between two neighbouring bins, in terms of x and y coords\n",
+    "for k in range(mhn.size):\n",
+    "    pdfmhx[k] = 0.5*(mhbins[k]+mhbins[k+1])\n",
+    "    pdfmhy[k] = mhn[k]\n",
+    "    \n",
+    "for k in range(fhn.size):    \n",
+    "    pdffhx[k] = 0.5*(fhbins[k]+fhbins[k+1])\n",
+    "    pdffhy[k] = fhn[k]\n",
+    "\n",
+    "# plot the calculated curve\n",
+    "plt.plot(pdfmhx, pdfmhy)\n",
+    "plt.plot(pdffhx, pdffhy)"
    ]
   },
   {
