Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
    ],
    "source": [
     "# Calculate a histogram for above data distribution\n",
-    "n, bins = np.histogram(male_df.Height, 10, density=1)\n",
+    "n, bins = np.histogram(normal_distribution, 10, density=1)\n",
     "\n",
     "# Initialize numpy arrays according to number of bins with zeros to store interpolated values\n",
     "pdfmhx = np.zeros(mhn.size)\n",
