--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     "n, bins = np.histogram(normal_distribution, 20, density=1)\n",
     "\n",
     "\n",
-    "plt.plot(pdffhx, pdffhy)"
+    "plt.hist(pdffhx, pdffhy)"
    ]
   },
   {
