--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "# Calculate the normal Density function \n",
-    "density = None"
+    "density = 1/"
    ]
   },
   {
