--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,10 @@
    "outputs": [],
    "source": [
     "# Calculate the normal Density function \n",
-    "density = 1/(sigma*sqrt)"
+    "import math\n",
+    "\n",
+    "\n",
+    "density = 1/(sigma*math.sqrt( x ))"
    ]
   },
   {
