--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
     "import math\n",
     "\n",
     "\n",
-    "density = 1/(sigma*math.sqrt( x ))"
+    "density = 1/(sigma*math.sqrt(2 ))"
    ]
   },
   {
