--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
     "import math\n",
     "\n",
     "\n",
-    "density = 1/(sigma*math.sqrt(2*math.pi))"
+    "density = 1/((sigma*math.sqrt(2*math.pi))**math.e)"
    ]
   },
   {
