--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,7 @@
     "# Calculate the normal Density function \n",
     "import math\n",
     "\n",
-    "density = (1/((sigma*math.sqrt(2*math.pi))**math.e))**(()/((2*sigma)**2))"
+    "density = (1/((sigma*math.sqrt(2*math.pi))**math.e))**(((()/))/((2*sigma)**2))"
    ]
   },
   {
