--- a/index.ipynb
+++ b/index.ipynb
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the normal Density function \n",
     "import math\n",
     "\n",
-    "density = (1/((sigma*math.sqrt(2*math.pi))**math.e))**((((20-mu))/((2*sigma)**2)))"
+    "density = (1/((sigma*math.sqrt(2*math.pi))**math.e))**((((bins-mu))/((2*sigma)**2)))"
    ]
   },
   {
