Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,11 @@
     }
    ],
    "source": [
-    "# Plot histogram along with the density function\n"
+    "# Plot histogram along with the density function\n",
+    "# Plot histogram along with the density function\n",
+    "plt.hist(s, 20, normed=True)\n",
+    "plt.plot(bins, density)\n",
+    "plt.show()"
    ]
   },
   {
