--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,15 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "\n",
+    "mu, sigma = 0.5, 0.1\n",
+    "N = 1000\n",
+    "s = np.random.normal(mu, sigma, N)\n",
+    "sns.distplot(s);"
+   ]
   },
   {
    "cell_type": "markdown",
